<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="new_confirmed">New Confirmed</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="new_deaths">New Deaths</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="new_recovered">New Recovered</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="loading">Loading…</string>
    <string name="see_countries">Countries</string>
    <string name="label_country">Country</string>
    <string name="confirmed">Confirmed</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="global_summary">Global Summary</string>
    <string name="menu_home">Home</string>
    <string name="menu_countries">Countries</string>
</resources>