<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.countries.CountryListFragment">

    <ProgressBar
        android:id="@+id/loadingIndicator"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/tableHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:background="#CC384149">

        <TextView
            android:id="@+id/labelCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/label_country"
            style="@style/TableList.Header" />

        <TextView
            android:id="@+id/labelConfirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:text="@string/confirmed"
            style="@style/TableList.Header"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/labelDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:text="@string/deaths"
            style="@style/TableList.Header"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/labelRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:text="@string/recovered"
            style="@style/TableList.Header"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableHeader"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        tools:listitem="@layout/row_country_item" />

</androidx.constraintlayout.widget.ConstraintLayout>